--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://cidtes-server.vercel.app/",
   "eslintConfig": {
     "extends": [
       "react-app",
