--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "CIDTES",
+  "name": "Centro de Capacitación, Investigación y Desarrollo Tecnológico en Energía y Sustentabilidad",
   "icons": [
     {
       "src": "logo.png",
