--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@react-three/drei": "^9.109.1",
+    "@react-three/fiber": "^8.16.8",
     "@tanstack/react-query": "^5.49.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -28,6 +30,8 @@
     "styled-components": "^6.1.11",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0",
+    "three": "^0.166.1",
+    "three-globe": "^2.31.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
